[package]
name = "ssd1325"
version = "0.1.0"
authors = ["Martin Mroz <martinmroz@gmail.com>"]
repository = "https://github.com/martinmroz/ssd1325.git"
homepage = "https://github.com/martinmroz/ssd1325.git"
documentation = "http://martinmroz.github.io/ssd1325"
license = "MIT"
readme = "README.md"
description = "Adafruit 2.7in Monochrome 128x64 OLED Driver"
keywords = ["ssd1325", "adafruit", "monochrome", "128x64", "display"]

[dependencies]
